force-app/main/default/objects/HelpReadingList__c/HelpReadingList__c.object-meta.xml
<CustomObject>
    <description>An ordered list containing Help Topics (as Reading List Entries)</description>
    <label>Help Reading List</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Reading Lists</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>