force-app/main/default/objects/HelpReadingList__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls the visibility of this Reading List: if unchecked, it is not available to Helped Users.</description>
    <inlineHelpText>Controls the visibility of this Reading List: if unchecked, it is not available to Helped Users.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>