force-app/main/default/objects/HelpReadingList__c/fields/FeaturedUntil__c.field-meta.xml
<CustomField>
    <fullName>FeaturedUntil__c</fullName>
    <description>Enter a date to feature this Reading List on all Topics</description>
    <inlineHelpText>Enter a date to feature this Reading List on all Topics</inlineHelpText>
    <label>Featured Until</label>
    <type>Date</type>
</CustomField>