force-app/main/default/objects/HelpReadingList__c/fields/LightningPresentationStyle__c.field-meta.xml
<CustomField>
    <fullName>LightningPresentationStyle__c</fullName>
    <description>Defines the overall styling to use when displaying this Reading List via the Improved Help Reading List Viewer Lightning component</description>
    <label>Lightning Presentation Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adopter</fullName>
            </value>
            <value>
                <fullName>Adopter - Minimal Topic</fullName>
            </value>
            <value>
                <fullName>Adopter - Topic Viewer</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>