force-app/main/default/objects/HelpReadingList__c/fields/NumberOfEntries__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEntries__c</fullName>
    <inlineHelpText>The Number of Help Topic Entries in this Reading List</inlineHelpText>
    <label>Number of Entries</label>
    <summaryForeignKey>HelpReadingListEntry__c.HelpReadingList__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>