force-app/main/default/objects/HelpReadingList__c/fields/ReadingListType__c.field-meta.xml
<CustomField>
    <fullName>ReadingListType__c</fullName>
    <description>Defines the way this Reading List will appear to end users and how it will operate</description>
    <inlineHelpText>Defines the way this Reading List will appear to end users and how it will operate</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Linear Guide</fullName>
            </value>
            <value>
                <fullName>Non-Linear Guide</fullName>
            </value>
            <value>
                <fullName>Reading List</fullName>
                <default>true</default>
                <label>Reading List</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>