force-app/main/default/objects/HelpReadingList__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <inlineHelpText>Short description of this Help Reading List</inlineHelpText>
    <label>Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>