force-app/main/default/objects/HelpReadingList__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <description>Classification to enable context-based visibility using data sharing rules.</description>
    <inlineHelpText>Classification to enable context-based visibility using data sharing rules.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>