force-app/main/default/objects/HelpReadingList__c/validationRules/FeaturedUntilPast.validationRule-meta.xml
<ValidationRule>
    <fullName>FeaturedUntilPast</fullName>
    <active>true</active>
    <description>Reading List Featured Until date may not be set in the past</description>
    <errorConditionFormula>FeaturedUntil__c &lt; today()</errorConditionFormula>
    <errorDisplayField>FeaturedUntil__c</errorDisplayField>
    <errorMessage>Featured Until may not be set to a date in the past.</errorMessage>
</ValidationRule>