force-app/main/default/objects/HelpReadingList__c/listViews/AllCurrentFeaturedReadingLists.listView-meta.xml
<ListView>
    <fullName>AllCurrentFeaturedReadingLists</fullName>
    <columns>NAME</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>ReadingListStatus__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FeaturedUntil__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>3. All Featured Reading Lists (Current)</label>
</ListView>