force-app/main/default/objects/HelpReadingList__c/listViews/AllFeaturedReadingLists.listView-meta.xml
<ListView>
    <fullName>AllFeaturedReadingLists</fullName>
    <columns>NAME</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FeaturedUntil__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>2. All Featured Reading Lists</label>
</ListView>