force-app/main/default/objects/HelpReadingList__c/listViews/AllReadingLists.listView-meta.xml
<ListView>
    <fullName>AllReadingLists</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>ReadingListStatus__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Reading Lists</label>
</ListView>