force-app/main/default/objects/HelpReadingList__c/listViews/AllReadingListsWNoTopics.listView-meta.xml
<ListView>
    <fullName>AllReadingListsWNoTopics</fullName>
    <columns>NAME</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>ReadingListStatus__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NumberOfEntries__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>4. Reading Lists with NO Help Topics</label>
</ListView>