force-app/main/default/objects/HelpReadingList__c/listViews/X6_All_My_Featured_Reading_Lists.listView-meta.xml
<ListView>
    <fullName>X6_All_My_Featured_Reading_Lists</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>ReadingListStatus__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>FeaturedUntil__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>7. All My Featured Reading Lists</label>
</ListView>