force-app/main/default/objects/HelpReadingList__c/listViews/X8_All_Guide_Reading_Lists.listView-meta.xml
<ListView>
    <fullName>X8_All_Guide_Reading_Lists</fullName>
    <columns>NAME</columns>
    <columns>ReadingListType__c</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>FeaturedUntil__c</columns>
    <columns>NumberOfEntries__c</columns>
    <columns>ReadingListStatus__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ReadingListType__c</field>
        <operation>equals</operation>
        <value>Linear Guide,Non-Linear Guide</value>
    </filters>
    <label>8. All Guide Reading Lists</label>
</ListView>